ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dispatcher-jira
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lb-dispatcher-jira
    networking.gke.io/managed-certificates: dispatcher-jira
    kubernetes.io/ingress.allow-http: false
spec: 
  rules:
  - http: 
     paths: 
     - path: /healthy
       backend: 
        serviceName: dispatcher-jira
        servicePort: 80
